commit para desafio complementario

--- a/css/estilos.css
+++ b/css/estilos.css
@@ -27,10 +27,6 @@ body, nav{
    text-decoration: none;
 }
 
-.formulario {
-   background-color: #c1d2d6;
-}
-
 .imp {
    margin-top: 100px;
 }
@@ -41,6 +37,7 @@ body, nav{
    flex-direction: column;
    align-items: center;
  }
+
  .contenidoPrincipal img {
    width: 80%;
    height: 80%;
@@ -173,18 +170,12 @@ body, nav{
    font-family: 'Mansalva', cursive;
 }
 
-
-
-
-
-
-
-
-
-
 .mapa {
-   background-color: #c1d2d6;
-}
+   margin: 30px 0;
+   display: flex;
+   flex-direction: column;
+   align-items: center;
+ }
 
 .mapa iframe {
    border: 2px solid rgb(187, 69, 69);
