commit para SEO

--- a/css/estilos_compilados.css
+++ b/css/estilos_compilados.css
@@ -40,11 +40,11 @@ body, nav {
   display: flex;
   -webkit-box-orient: vertical;
   -webkit-box-direction: normal;
-  -ms-flex-direction: column;
-  flex-direction: column;
+      -ms-flex-direction: column;
+          flex-direction: column;
   -webkit-box-align: center;
-  -ms-flex-align: center;
-  align-items: center;
+      -ms-flex-align: center;
+          align-items: center;
 }
 
 .contenidoPrincipal img {
@@ -80,7 +80,7 @@ body, nav {
 
 .scale:hover {
   -webkit-transform: scale(1.1);
-  transform: scale(1.1);
+          transform: scale(1.1);
 }
 
 .transition {
@@ -175,6 +175,7 @@ body, nav {
   font-weight: bolder;
   font-size: larger;
   font-family: 'Mansalva', cursive;
+  background-color: rgba(0, 0, 0, 0.05);
 }
 
 .mapa {
@@ -184,11 +185,11 @@ body, nav {
   display: flex;
   -webkit-box-orient: vertical;
   -webkit-box-direction: normal;
-  -ms-flex-direction: column;
-  flex-direction: column;
+      -ms-flex-direction: column;
+          flex-direction: column;
   -webkit-box-align: center;
-  -ms-flex-align: center;
-  align-items: center;
+      -ms-flex-align: center;
+          align-items: center;
 }
 
 .mapa iframe {
@@ -199,11 +200,6 @@ body, nav {
 .carrito button {
   color: #bb4545;
   font-family: 'Mansalva', cursive;
-  font-weight: bolder;
-  font-size: larger;
-}
-
-.precio {
   font-weight: bolder;
   font-size: larger;
 }
