ultimo commit para desafio siete

--- a/scss/estilos.css
+++ b/scss/estilos.css
@@ -1,4 +1,11 @@
 @import url("https://fonts.googleapis.com/css2?family=Mansalva&display=swap");
+.carrito button {
+  color: #bb4545;
+  font-family: 'Mansalva', cursive;
+  font-weight: bolder;
+  font-size: larger;
+}
+
 body, nav {
   background: -webkit-gradient(linear, left top, right top, from(#c1d2d6), to(#bad47b));
   background: linear-gradient(to right, #c1d2d6, #bad47b);
@@ -136,9 +143,9 @@ body, nav {
 
 .header_servicios {
   text-align: center;
-  color: #bb4545;
   font-weight: bolder;
   font-size: 3rem;
+  color: #bb4545;
   font-family: 'Mansalva', cursive;
 }
 
