--- a/scss/_tools.scss
+++ b/scss/_tools.scss
@@ -1,11 +1,17 @@
 $Copyright: (
-    background-color: rgba(0, 0, 0, 0.05),
-    font-weight: bolder
+  background-color: rgba(0, 0, 0, 0.05),
+  font-weight: bolder
 );
 
 %carritoBtn {
-    color: #bb4545;
+  color: #bb4545;
   font-family: 'Mansalva', cursive;
   font-weight: bolder;
   font-size: larger;
+}
+
+@mixin hscios($ta, $fw, $fs) {
+  text-align: $ta;
+  font-weight: $fw;
+  font-size: $fs;
 }
